# hydra_pyinst

./: .gitignore  LICENSE  README.md  build.sh  config.yaml  pyproject.toml
src/: main.py
