[project]
name = "hydra-pyinst"
version = "0.1.0"
description = ""
authors = [
    {name = "youngseong",email = "youngseong0601@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "hydra (>=2.5,<3.0)",
    "pyinstaller (>=6.17.0,<7.0.0)",
    "cython (>=3.2.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
