[project]
name = "hydra-pyinst"
version = "0.1.0"
description = ""
authors = [
    {name = "youngseong",email = "youngseong0601@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "cython (>=3.2.2,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "pyinstaller (>=6.17.0,<7.0.0)",
    "ruff (>=0.14.8,<0.15.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
